Added the submit buttons

--- a/Form-Controls/index.html
+++ b/Form-Controls/index.html
@@ -20,10 +20,6 @@
      <input type="text" name="name" id="name"  minlength="2" required>
      </div>
      <div id="user-info">
-      <label for="surname">Surname:</label>
-     <input type="text" name="surname" id="surname" minlength="2" required>
-     </div>
-     <div id="user-info">
       <label for="email">Email:</label>
      <input type="email" name="email" id="email" required>
      </div>
@@ -63,6 +59,9 @@
      <div id="date"> 
       <label for="date">Date</label>
       <input type="date" min="2024-10-18" max="2024-11-18" required>
+     </div>
+     <div id="button">
+      <button  type="submit">Submit</button>
      </div>
     <!-- try writing out the requirements first-->
   </form>
