--- a/Form-Controls/index.html
+++ b/Form-Controls/index.html
@@ -13,7 +13,7 @@
     <h1>Product Pick</h1>
   </header>
   <main>
-  <form>
+  <form action=""> 
     <!-- write your html here-->
      <div id="user-info"> 
       <label for="name">Name:</label>
