--- a/Form-Controls/index.html
+++ b/Form-Controls/index.html
@@ -57,8 +57,8 @@
     
 
      <div id="date"> 
-      <label for="date">Date</label>
-      <input type="date" name="date" min="2024-10-18" max="2024-11-18" required>
+      <label for="dates">Date</label>
+      <input type="date" name="dates" min="2024-10-18" max="2024-11-18" required>
      </div>
      <div id="button">
       <button  type="submit">Submit</button>
