Added validation on date

--- a/Form-Controls/index.html
+++ b/Form-Controls/index.html
@@ -57,7 +57,12 @@
           <legend>Delivery details</legend>
           <p>Pleaase choose a delivery date in the next 4 weeks.</p>
           <label for="date">Requeste date</label>
-          <input type="date" id="date" name="date">
+          <input 
+            type="date" 
+            id="date" 
+            name="date"
+            min="2024-10-19"
+            max="2024-11-19">
         </fieldset>
 
         <button type="submit" id="button">Place your order</button>
