added name to label

--- a/Form-Controls/index.html
+++ b/Form-Controls/index.html
@@ -58,7 +58,7 @@
 
      <div id="date"> 
       <label for="dates">Date</label>
-      <input type="date" name="dates" min="2024-10-18" max="2024-11-18" required>
+      <input type="date" name="dates" min="2024-10-18" max="2024-11-18" id="dates" required>
      </div>
      <div id="button">
       <button  type="submit">Submit</button>
