--- a/Form-Controls/index.html
+++ b/Form-Controls/index.html
@@ -17,7 +17,7 @@
     <!-- name of customer-->
     <div class="form-group">
       <label for="customer-name">Full name</label>
-      <input type="text" id="custormer-name" name="customer-name" min="2" required>
+      <input type="text" id="customer-name" name="customer-name" min="2" required>
     </div>
     <!-- customer email-->
      <div class="form-group">
