--- a/Wireframe/index.html
+++ b/Wireframe/index.html
@@ -4,6 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Git Universe</title>
+    <link rel="preload" href="https://static.mongodb.com/com/fonts/MongoDBValueSerif-Medium.woff2" as="font" type="font/woff2" crossorigin="anonymous">
+    <link rel="preload" href="https://static.mongodb.com/com/fonts/MongoDBValueSerif-Bold.woff2" as="font" type="font/woff2" crossorigin="anonymous">
+    <link rel="preload" href="https://static.mongodb.com/com/fonts/MongoDBValueSerif-Regular.woff2" as="font" type="font/woff2" crossorigin="anonymous">
     <link rel="stylesheet" href="css/style.css">
   </head>
   <body>
