--- a/Wireframe/index.html
+++ b/Wireframe/index.html
@@ -13,6 +13,7 @@
    
     <header>
       <h1>Git for Dummies</h1>
+      <p>A beginner-friendly guide to mastering Git and version control.</p>
 
     </header>
     <div class="main">
