--- a/Form-Controls/index.html
+++ b/Form-Controls/index.html
@@ -10,19 +10,53 @@
 </head>
 <body>
   <header>
-    <h1>Product Pick</h1>
+    <h1 class="title">Product Pick</h1>
   </header>
   <main>
-  <form>
-    <!-- write your html here-->
-    <!-- try writing out the requirements first-->
-  </form>
-
+    <form action="results.html" method="GET" enctype="multipart/form-data">
+      <div class="form-data">
+          <label for="name">Name</label>
+          <input type="text" name="name" id="name" placeholder="username" required>
+      </div>
+      <div class="form-data">
+          <label for="email">Email</label>
+          <input type="email" id="email" name="email" required>
+      </div>
+      <div class="form-data">
+          <label for="phone">Phone</label>
+          <input id="phone" name="phone" type="tel" required>
+      </div>
+      <div class="form-data">
+          <label for="Color">T-shirt Color</label>
+          <select name="Color" id="Color">
+              <option value="" selected disabled>-- Please select a color --</option>
+              <option value="Black">Black</option>
+              <option value="White">White</option>
+              <option value="Grey">Grey</option>
+          </select>
+      </div>
+      <div class="form-data">
+          <label for="Size">T-shirt Size</label>
+          <select name="Size" id="Size">
+              <option value="" selected disabled>-- Please select a size --</option>
+              <option value="XS">XS</option>
+              <option value="S">S</option>
+              <option value="M">M</option>
+              <option value="L">L</option>
+              <option value="XL">XL</option>
+              <option value="XLL">XLL</option>
+          </select>
+      </div>
+      <div class="form-data">
+          <label for="Date">Desirable Delivery Date</label>
+          <input id="Date" Name="Date" type="date" min="2024/11/17">
+      </div>
+      <button type="reset">Reset</button>
+      <button type="submit">Submit</button>
+    </form>
   </main>
   <footer>
-    <!-- change to your name-->
-    <h2>By HOMEWORK SOLUTION</h2>
+    <p class="footer">&copy; 2024 T-Shirt Register. All rights reserved.</p>
   </footer>
 </body>
-
 </html>
