Add labels for name, email, delivery date

--- a/Form-Controls/index.html
+++ b/Form-Controls/index.html
@@ -14,8 +14,16 @@
   </header>
   <main>
   <form>
-    <!-- write your html here-->
-    <!-- try writing out the requirements first-->
+    <div>
+      <label for="name">Name</label>
+      <input type="text" id="name" name="name" required>
+    </div>
+    <div>
+      <label for="email">Email</label>
+      <input type="email" id="email" name="email" required>
+    </div>
+    <label for="date">Delivery Date</label>
+    <input type="date" name="date" id="date" required>
   </form>
 
   </main>
