Add submit button, missed div

--- a/Form-Controls/index.html
+++ b/Form-Controls/index.html
@@ -22,8 +22,11 @@
       <label for="email">Email</label>
       <input type="email" id="email" name="email" required>
     </div>
+    <div>
     <label for="date">Delivery Date</label>
     <input type="date" name="date" id="date" required>
+    </div>
+    <button class="submit" type="submit">Submit</button>
   </form>
 
   </main>
