Add label for selecting colour

--- a/Form-Controls/index.html
+++ b/Form-Controls/index.html
@@ -22,6 +22,20 @@
       <label for="email">Email</label>
       <input type="email" id="email" name="email" required>
     </div>
+
+    <div>
+      <h2>T-Shirt Colour</h2>
+      <label for="red">
+        <input type="radio" id="red" name="color" value="red" required> Red
+      </label>
+      <label for="blue">
+        <input type="radio" id="blue" name="color" value="blue" required> Blue
+      </label>
+      <label for="green">
+        <input type="radio" id="green" name="color" value="green" required> Green
+      </label>
+    </div>
+
     <div>
     <label for="date">Delivery Date</label>
     <input type="date" name="date" id="date" required>
@@ -31,8 +45,7 @@
 
   </main>
   <footer>
-    <!-- change to your name-->
-    <h2>By HOMEWORK SOLUTION</h2>
+    <p>&copy; 2024 Created by Yulia. All rights reserved.</p>
   </footer>
 </body>
 
