--- a/Form-Controls/index.html
+++ b/Form-Controls/index.html
@@ -19,7 +19,7 @@
       <label for="name">Name:</label>
      <input type="text" name="name" id="name"  minlength="2" required>
      </div>
-     <div id="user-info">
+     <div id="email-info">
       <label for="email">Email:</label>
      <input type="email" name="email" id="email" required>
      </div>
