added labels to select elements

--- a/Form-Controls/index.html
+++ b/Form-Controls/index.html
@@ -39,18 +39,18 @@
           <div class="size">
             <label for="size_choice">Choose a size.</label>
             <select name="size" id="size">
-              <option value="select">Select a size</option>
-              <option value="extra_small">XS</option>
-              <option value="small">S</option>
-              <option value="medium">M</option>
-              <option value="large">L</option>
-              <option value="extra_large">XL</option>
-              <option value="extra_extra_large">XXL</option>
+              <option aria-label="select">Select a size</option>
+              <option aria-label="extra_small" value="extra_small">XS</option>
+              <option aria-label="small" value="small">S</option>
+              <option aria-label="medium" value="medium">M</option>
+              <option aria-label="large" value="large">L</option>
+              <option aria-label="extra_large" value="extra_large">XL</option>
+              <option aria-label="extra_extra_large" value="extra_extra_large">XXL</option>
             </select>
           </div><br>
           <div class="date">
             <label for="date">Choose a deliver date.</label>
-            <input type="date" id="date" name="delivery_date" />
+            <input type="date" id="date" name="delivery_date" />aria-label="extra_small"
           </div>
         </form>
       </div>
