--- a/Form-Controls/index.html
+++ b/Form-Controls/index.html
@@ -26,7 +26,7 @@
       <!-- Customer's Email -->
       <div class="email"> 
         <label for="customer-email">Email:</label><br>
-        <input type="email" id="customer-email" pattern=".+@.\.com"  required>
+        <input type="email" id="customer-email" pattern="^[a-zA-Z0-9._%+-]+@[a-zA-Z0-9.-]+\.[a-zA-Z]{2,}$"  required>
       </div>
       <!-- T-Shirt Color -->
       <div>
