--- a/Form-Controls/index.html
+++ b/Form-Controls/index.html
@@ -51,6 +51,7 @@
             <input type="date" id="date" name="delivery_date" />
           </div>
         </form>
+        <button class="button" type="submit" value="submit">Submit</button>
       </div>
     </main>
     <footer>
