added br after the form

--- a/Form-Controls/index.html
+++ b/Form-Controls/index.html
@@ -50,7 +50,7 @@
             <label for="date">Choose a deliver date:</label>
             <input type="date" id="date" name="delivery_date" />
           </div>
-        </form>
+        </form><br>
         <button class="button" type="submit" value="submit">Submit</button>
       </div>
     </main>
