Update header to display 'By Sajad Soornisofla'

--- a/Form-Controls/index.html
+++ b/Form-Controls/index.html
@@ -89,7 +89,7 @@
       </main>
       <footer>
         <!-- change to your name-->
-        <h2>By HOMEWORK SOLUTION</h2>
+        <h2>By Sajad Soornisofla</h2>
       </footer>
     <!-- <script>
       // Get the date input element by its ID
