Remove action and method attributes from the form.

--- a/Form-Controls/index.html
+++ b/Form-Controls/index.html
@@ -20,7 +20,7 @@
         <h1>Product Pick</h1>
       </header>
       <main>
-        <form action="resilts.html" method="get">
+        <form>
           <div class="grid--1">
             <label for="name">Name</label>
             <input placeholder="First Name" name="name" id="name" required />
@@ -62,6 +62,7 @@
               <label for="gray">Gray</label>
             </div>
           </div>
+
           <div class="grid--1">
             <label for="size">Size</label>
             <select id="size" name="size">
@@ -73,6 +74,8 @@
               <option>XXL</option>
             </select>
           </div>
+
+
           <div class="grid--1">
             <label for="date">Delivey Date</label>
             <input
