--- a/Form-Controls/index.html
+++ b/Form-Controls/index.html
@@ -66,7 +66,8 @@
 
           <fieldset class="grid--1">
             <legend for="size">Size</legend>
-            <select id="size" name="size">
+            <select id="size" name="size" required>
+              <option value="" disabled selected>Select a size</option>
               <option>XS</option>
               <option>S</option>
               <option>M</option>
