--- a/Form-Controls/index.html
+++ b/Form-Controls/index.html
@@ -14,8 +14,29 @@
   </header>
   <main>
   <form>
-    <!-- write your html here-->
-    <!-- try writing out the requirements first-->
+    <fieldset>
+      <label for="name">Name</label>
+      <input type="text" id="name" placeholder="Enter your name" required>
+      <label for="email">Email</label>
+      <input type="email" id="email" placeholder="Email" required>
+      <label for="color">Color</label>
+      <select name="color" id="color">
+        <option value="red">Red</option>
+        <option value="green">Green</option>
+        <option value="light-green">Light Green</option>
+      </select>
+      <label for="size">Sizes</label>
+      <select name="sizes" id="size">
+        <option value="XS">XS</option>
+        <option value="S">S</option>
+        <option value="M">M</option>
+        <option value="L">L</option>
+        <option value="XL">XL</option>
+        <option value="XXL">XXL</option>
+      </select>
+      <label for="data">Date</label>
+      <input type="date" id="data" min="17/10/2024">
+    </fieldset>
   </form>
 
   </main>
