--- a/Form-Controls/index.html
+++ b/Form-Controls/index.html
@@ -69,7 +69,7 @@
           <input
             type="date"
             name="date"
-            id="date"
+            id="DeliveryDate"
             min="2024-10-19"
             max="2024-11-08"
           />
